# swigpy

./: .gitignore  CMakeLists.txt  README.md  setup.py
src/: CMakeLists.txt  greet.cpp  greet.h  greet.i
